docs/doc_assets/css/styleguide.scss
---
---

// Imports -------------- //

@import 'all';

// Variables -------------- //

$color-grid-dark:      #727272;
$color-grid-light:     #e3e4e5;
$font-monospace:       Consolas, Monaco, 'Andale Mono', monospace;


.site-header {
  @include position(fixed, 0 null null 0);
  background-color: $color-primary-darkest;

  @include media($medium-screen) {
    border-bottom: none;
    position: relative;
  }

  // Removes fixed header on Android in landscape with an open keyboard
  @media screen and (min-aspect-ratio: 13/9) and (max-width: ($medium-screen)) {
    position: absolute;
  }
}

.site-header-navbar {
  @include media($medium-screen) {
    height: 8rem;
    width: 100%;
  }

  &.is-scrolled {
    @include media($medium-screen) {
      display: none;
    }
  }

  // Firefox fix so that navbar buttons to align right
  @-moz-document url-prefix() {
    @include media($medium-screen) {
      padding-top: 1px;
    }
  }
}

.sidenav-mobile {
  @include media($medium-screen) {
    display: none;
  }

  .usa-sidenav-sub_list {
    &[aria-hidden=true] {
      display: none;
    }
  }
}

.site-logo {
  a {
    color: $color-white;
  }

  em {
    font-family: $font-serif;
    font-size: 1.4rem;
    line-height: 3.7rem;

    @include media($medium-screen) {
      font-size: $h3-font-size;
      line-height: 7.5rem;
    }
  }
}

.site-nav-secondary {
  display: none;

  @include media($medium-screen) {
    background-color: $color-white;
    border-bottom: 1px solid $color-gray-light;
    clear: both;
    display: block;
    height: $height-nav-secondary;
    padding-left: 3rem;
  }

  &.is-scrolled {
    position: fixed;
    top: 0;
    width: 100%;
  }

  ul {
    @include unstyled-list;

    li {
      display: inline;
      padding-right: 3rem;
    }
  }

  a {
    @include padding (1.6rem null);
    color: $color-gray;
    font-size: $h6-font-size;
    letter-spacing: 0.3px;
    line-height: $height-nav-secondary;
    text-decoration: none;

    &:hover {
      color: $color-primary;
      text-decoration: underline;
    }

    &.usa-current {
      color: $color-primary;
      font-weight: $font-bold;
    }
  }
}

@mixin outline-inverse-button {
  // TODO: Fix this with button mixin
  .usa-button.usa-button-outline-inverse {
    box-shadow: inset 0 0 0 2px $color-primary;
    color: $color-primary;

    &:hover {
      box-shadow: inset 0 0 0 2px $color-primary-darker;
      color: $color-primary-darker;
    }
  }
}

// Sidebar Nav --------- //

.sidenav {
  display: none;

  @include media($medium-screen) {
    bottom: 0;
    display: block; // starting: not scrolled
    float: left; // starting: not scrolled
    overflow: auto;
    padding: 4rem 1rem 3rem 3rem;
    width: $width-nav-sidebar;
  }

  &.is-scrolled {
    position: fixed;
    top: $height-nav-secondary;
  }

  .lt-ie9 & {
    width: 25%;
  }

  .usa-navigation-submenu {
    &[aria-hidden="false"] {
      display: block;
    }
  }
}

// Main Content --------- //

.main-content {
  @include position(absolute, 4rem 0 0 null);
  display: inline-block; // starting: not scrolled
  margin-top: 4rem; // starting: not scrolled
  position: relative;
  width: 100%;
  top: 6.3rem; // height of disclaimer + navbar on mobile

  @include media($medium-screen + $width-nav-sidebar) {
    width: calc(100% - #{$width-nav-sidebar});
    top: 0;
  }

  &.is-scrolled {
    @include media($medium-screen + $width-nav-sidebar) {
      position: absolute;
      top: 15.3rem;
    }
  }

  .lt-ie9 & {
    width: 75%;
  }
}

// Styleguide Content -------- //

.styleguide-content {
  @include padding(null $site-margins-mobile);
  margin-bottom: 5em;
  max-width: $site-max-width;
  position: relative;

  @media (min-width: $medium-screen + $width-nav-sidebar) {
    @include padding(null $site-margins);
  }

  header {
    > h1 {
      display: inline-block;
      margin-top: 0;
    }
  }

  section {
    > h2 {
      display: inline-block;
    }

    > .tooltip {
      margin-top: 56px;
    }
  }
}

// Label links

%label-maturity {
  color: $color-gray-dark;
  font-size: 1.4rem;
  font-weight: $font-bold;
  margin-left: 1.2rem;
  position: absolute;
  text-decoration: none;

  &:hover,
  &:visited {
    color: $color-gray-dark;
  }

  &[href^="http:"]:not([href*="standards.com"]),
  &[href^="https:"]:not([href*="standards.com"]) {
    &::after {
      display: none;
    }
  }
}

@mixin label-link($color-background, $color-background-hover) {
  @extend %label-maturity;
  background-color: $color-background;

  &:hover {
    background-color: $color-background-hover;
  }
}

.label-alpha {
  @include label-link($color-gold-lightest, $color-gold-lighter);
}

.label-beta,
.label-in-progress {
  @include label-link($color-primary-alt-lightest, $color-primary-alt-light);
}

.label-recommended,
.label-done {
  @include label-link($color-green-lightest, $color-green-lighter);
}

h1 + .tooltip {
  a {
    margin-top: 1.7rem;
  }
}

h2 + .tooltip {
  a {
    margin-top: 1.3rem;
  }
}

.heading-margin-alt {
  margin-top: 6rem;
}

.site-subheading {
  @include h6;
  color: $color-gray;
  display: block;
  letter-spacing: 0.5px;
  margin-bottom: 0.6rem;
  margin-top: 0;
}

// Footer --------------- //

.site-footer {
  @media (min-width: $medium-screen + $width-nav-sidebar) {
    @include margin(null 3rem);
  }
}

.site-footer-nav {
  margin-bottom: 5.5rem;

  @media (min-width: $medium-screen + $width-nav-sidebar) {
    display: none;
  }

  .usa-sidenav-sub_list {
    display: none;
  }
}

.site-footer-info {
  @include padding(3rem null);
  border-top: 1px solid $color-gray-light;

  p {
    font-size: $h5-font-size;

    &:first-child {
      margin-top: 0;
    }
  }

  img {
    margin-right: 1.2rem;
    width: 3.2rem;

    &.logo-usds {
      width: 4.3rem;
    }
  }

  > .usa-grid {
    @media (min-width: $medium-screen + $width-nav-sidebar) {
      margin-left: 0;
      padding-left: 0;
    }
  }
}
/* ... */

